--- a/Ex05_StockPricePrediction.ipynb
+++ b/Ex05_StockPricePrediction.ipynb
@@ -10,7 +10,10 @@
         {
           "name": "stderr",
           "output_type": "stream",
-         
+          "text": [
+            "c:\\Users\\shafe\\anaconda3\\envs\\AiMath\\lib\\site-packages\\requests\\__init__.py:102: RequestsDependencyWarning: urllib3 (1.26.11) or chardet (5.1.0)/charset_normalizer (2.0.4) doesn't match a supported version!\n",
+            "  warnings.warn(\"urllib3 ({}) or chardet ({})/charset_normalizer ({}) doesn't match a supported \"\n"
+          ]
         }
       ],
       "source": [
